Bug 61638 - RTF and DOCX equations sized incorrectly
Summary: RTF and DOCX equations sized incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other macOS (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0 target:4.2.0.1
Keywords:
: 68193 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-02-28 22:12 UTC by disinterested
Modified: 2013-12-17 10:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
DOCX file with equations (24.25 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-03-01 18:44 UTC, disinterested
Details
RTF with equations (74.66 KB, application/rtf)
2013-03-01 18:45 UTC, disinterested
Details
What it looks like in Writer (13.24 KB, image/png)
2013-03-01 18:45 UTC, disinterested
Details
What it looks like in writer (13.24 KB, image/png)
2013-03-01 18:47 UTC, disinterested
Details

Note You need to log in before you can comment on or make changes to this bug.
Description disinterested 2013-02-28 22:12:19 UTC
When RTF or DOCX files containing equations are opened in Writer, all of the equation objects are stretched or shrunk to be the same size, with the resulting document unreadable. (This is on OS X 10.6.8.)

A remedy is to individually click on each equation to let writer automatically resize it. This process is time consuming, however, and runs afoul of bugs 46142 (https://bugs.freedesktop.org/show_bug.cgi?id=46142, if the file is saved as ODT, the formulas are lost) and 36634 (https://bugs.freedesktop.org/show_bug.cgi?id=36634, equation editor becomes slower as it is opened multiple times).
Comment 1 Jorendc 2013-03-01 17:35:58 UTC
@bug reporter: is it possible to attach a sample file?

Thanks in advance,
Joren

-------------------
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link: https://wiki.documentfoundation.org/QA/BugTriage  There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-list
Comment 2 disinterested 2013-03-01 18:44:32 UTC
Created attachment 75750 [details]
DOCX file with equations
Comment 3 disinterested 2013-03-01 18:45:00 UTC
Created attachment 75751 [details]
RTF with equations
Comment 4 disinterested 2013-03-01 18:45:39 UTC
Created attachment 75752 [details]
What it looks like in Writer
Comment 5 disinterested 2013-03-01 18:47:50 UTC
Created attachment 75753 [details]
What it looks like in writer
Comment 6 disinterested 2013-03-01 18:48:38 UTC
I attached DOCX and RTF examples as well as a screenshot.
Comment 7 Jorendc 2013-03-01 19:03:55 UTC
Thanks for your response!

I think this issue is a duplicate of Bug 59053.
Can you please retest using LibreOffice 4.0.1.2 rc (= second release candidate) that you can download here: http://www.libreoffice.org/index.php/download/pre-releases/

I can't reproduce this behavior anymore using LibreOffice 4.0.1.1 rc, Linux Mint 14 x64.

Thanks for reporting,
Hope this is solved.

Kind regards,
Joren

PS: I leave this bug status NEEDINFO, please retest and confirm this is fixed or not.
Comment 8 disinterested 2013-03-01 23:12:42 UTC
The bug persists in 4.0.1.2. This may be specific to OS X -- I can't reproduce it on Windows 7.
Comment 9 Jorendc 2013-03-04 19:28:55 UTC
(In reply to comment #8)
> The bug persists in 4.0.1.2. This may be specific to OS X -- I can't
> reproduce it on Windows 7.

You're right. Tested using Mac OSX 10.8.2 with LibreOffice Version 4.0.1.2 (Build ID: 84102822e3d61eb989ddd325abf1ac077904985)
TinderBox: MacOSX TDF Release, Branch:libreoffice-4-0, Time: 2013-02-27_17:15:43 and I can still reproduce this behavior. Therefore I mark this as NEW.

Kind regards,
Joren
Comment 10 Thomas van der Meulen [retired] 2013-08-23 08:59:18 UTC
*** Bug 68193 has been marked as a duplicate of this bug. ***
Comment 11 Miklos Vajna 2013-12-16 19:39:46 UTC
This got worse, now the importer simply crashes on attachement 75751. If I manually edit the file to avoid the ending "." in the second math object, then the size itself is fine, though.

I'll take care of this.
Comment 12 Commit Notification 2013-12-17 09:11:06 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cdd59ee13b1dca7e3d269bf1a3c555903eee96ee

fdo#61638 SmParser::NextToken: don't crash on ending dot



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-12-17 10:19:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4d2be4e7fa811db504a0fade72514b514ac84c96&h=libreoffice-4-2

fdo#61638 SmParser::NextToken: don't crash on ending dot


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.