fdo#61638 SmParser::NextToken: don't crash on ending dot

Change-Id: Ia9c168e52a99286910c9e63e0e052671c5259ba8